--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -9,6 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="/src/main.css" rel="stylesheet" />
+    
+    <!-- Favicon - Update once logo is added to public/ -->
+    <!-- TODO: Generate favicon files from logo and add to public/ directory -->
+    <!-- Expected files: favicon.ico, favicon-16x16.png, favicon-32x32.png, apple-touch-icon.png -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="theme-color" content="#000000" />
 </head>
 
 <body>
