feat: add Google Analytics tracking script

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -9,7 +9,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="/src/main.css" rel="stylesheet" />
-    
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S71XEXELEN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-S71XEXELEN');
+    </script>
+
     <!-- Favicon -->
     <!-- favicon.ico is present in public/ directory -->
     <!-- Additional favicon files (favicon-16x16.png, favicon-32x32.png, apple-touch-icon.png) can be added later for enhanced browser/app support -->
