feat: finalize brand logo assets (#167)
* feat: finalize brand logo assets

* chore: tune logo theming and apple icon tag

---------

Co-authored-by: Steven Irvin <stevei101@users.noreply.github.com>

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -12,8 +12,9 @@
 
   <!-- Favicon -->
   <!-- favicon.ico is present in public/ directory -->
-  <!-- Additional favicon files (favicon-16x16.png, favicon-32x32.png, apple-touch-icon.png) can be added later for enhanced browser/app support -->
+  <!-- Additional favicon files (favicon-16x16.png, favicon-32x32.png) can be added later for enhanced browser/app support -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <meta name="theme-color" content="#000000" />
 </head>
 
